--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
