--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Barcode Scanner
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
