--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
 
     <application
         android:allowBackup="true"
@@ -26,21 +26,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliveryAssistant">
-        <activity android:name=".view.ProductActivity"></activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.HomeActivity" />
+        <activity android:name=".view.ProductActivity" />
         <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+                           The API key for Google Maps-based APIs is defined as a string resource.
+                           (See the file "res/values/google_maps_api.xml").
+                           Note that the API key is linked to the encryption key used to sign the APK.
+                           You need a different API key for each encryption key, including the release key that is used to
+                           sign the APK for publishing.
+                           You can define the keys for the debug and release targets in src/debug/ and src/release/.
+                      -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".view.LoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
