--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,9 @@ dependencies {
 
     // Barcode Scanner
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
+    // Google maps dependencies
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
