--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    // material components
-    implementation 'com.google.android.material:material:1.3.0'
+    // Vollet
+    implementation 'com.android.volley:volley:1.2.0'
 
     // bottom navigation bar
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.2'
