--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".OrderMapActivity"
+            android:label="@string/title_activity_order_map"></activity>
+        <activity
             android:name=".view.LoginActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
